# lab-redes-1

./: CMakeLists.txt  README.md
archivos-cliente/: archivo.txt  archivo.txt.enc
archivos-servidor/: archivo.txt  archivo.txt.enc
include/: tcp.h
src/: client.c  server.c  tcp.c
